# OpenGewe

./: .gitignore  CHANGELOG.md  FASTAPI_BACKEND_DETAILED_PLAN.md  OpenGewe-WebPanel-Development-Plan.md  REACT_FRONTEND_DETAILED_PLAN.md  README.md  add_finder_modules.md  add_sns_modules.md  advanced_message_example.py  all_finder_api.md  fastapi_server.py  flask_example.py  login.py  main_config_example.toml  plugin_example.py  pyproject.toml  requirements.txt  setup.py  shrimp-rules.md  start.sh  start_backend.sh  start_frontend.sh  test_plugin_functionality.py  verify_plugin_system.py
.github/workflows/: python-publish.yml
backend/: alembic.ini  main.py  pytest.ini  requirements-backend.txt  requirements-test.txt  requirements.txt  test_config.example.toml
backend/alembic/: README.md  env.py
backend/app/: __init__.py  main.py
backend/plugins/: __init__.py
backend/scripts/: check_backend.py  run_migrations.py
backend/tests/: README.md  conftest.py
frontend/: DEV-GUIDE.md  README.md  bot-management-task.md  check-backend.js  eslint.config.js  index.html  optimize.js  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/app/: routes.ts
frontend/public/: debug.html
frontend/src/: App.jsx  App.tsx  index.css  main.tsx  root.tsx  vite-env.d.ts
opengewe/: client.py
opengewe/callback/: factory.py
opengewe/log/: __init__.py  config.py  formatters.py  utils.py
opengewe/logger/: config.py  formatters.py
opengewe/message/: __init__.py  factory.py
opengewe/mixin/: message_mixin.py
opengewe/modules/: account.py  contact.py  favorite.py  finder.py  group.py  message.py  sns.py  tag.py
opengewe/queue/: __init__.py  base.py  simple.py
opengewe/utils/: decorators.py  event_manager.py  plugin_base.py  plugin_manager.py
opengewechat/: __init__.py  client.py
opengewechat/message/: __init__.py  factory.py  handlers.py  models.py
opengewechat/modules/: __init__.py  account.py  contact.py  favorite.py  finder.py  group.py  login.py  message.py  personal.py  sns.py  tag.py
plugins/: __init__.py  echo_plugin.py  message_logger_plugin.py  silk_convert_plugin.py  text_quote_plugin.py
plugins/AIAssistant/: README.md  (+2 more)
test/: wechat_callback_messages.json  回调消息详解.md
webpanel/: main.py  requirements.txt
(+276 files in other folders)
