[project]
name = "opengewe"
version = "0.0.1"
description = "基于Gewe和Gewechat的开源微信机器人异步框架，提供高性能的微信自动化解决方案"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker>=1.9.0",
    "certifi>=2025.1.31",
    "charset-normalizer>=3.4.1",
    "click>=8.1.8",
    "idna>=3.10",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "markupsafe>=3.0.2",
    "numpy>=2.2.5",
    "pilk>=0.2.4",
    "qrcode>=8.1",
    "typing>=3.10.0.0",
    "typing-extensions>=4.13.2",
    "urllib3>=2.4.0",
    "aiohttp>=3.9.2",
    "aiofiles>=23.2.1",
    "aiodns>=3.1.1",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "pytz>=2025.2",
    "apscheduler>=3.11.0",
    "loguru>=0.6.0",
    "setuptools>=80.7.1",
    "redis>=6.1.0",
]

[project.optional-dependencies]
dependencies = ["celery>=5.5.2"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["opengewe*"]
